--- a/vercel.json
+++ b/vercel.json
@@ -8,11 +8,13 @@
     ],
     "routes": [
         {
-            "src": "/.*",
+            "src": "(.*)",
             "dest": "src/main.ts",
             "methods": [
                 "GET",
-                "POST"
+                "POST",
+                "PUT",
+                "DELETE"
             ]
         }
     ]
